--- a/client_side/resources/ui/passwords_edit_window.ui
+++ b/client_side/resources/ui/passwords_edit_window.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>414</width>
-    <height>586</height>
+    <height>602</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -388,6 +388,21 @@ QProgressBar::chunk {
    </item>
   </layout>
  </widget>
+ <tabstops>
+  <tabstop>service_lineEdit</tabstop>
+  <tabstop>login_lineEdit</tabstop>
+  <tabstop>password_lineEdit</tabstop>
+  <tabstop>url_lineEdit</tabstop>
+  <tabstop>category_comboBox</tabstop>
+  <tabstop>notes_plainTextEdit</tabstop>
+  <tabstop>capital_checkBox</tabstop>
+  <tabstop>lowercase_checkBox</tabstop>
+  <tabstop>numbers_checkBox</tabstop>
+  <tabstop>symbols_checkBox</tabstop>
+  <tabstop>length_spinBox</tabstop>
+  <tabstop>generate_pushButton</tabstop>
+  <tabstop>confirm_pushButton</tabstop>
+ </tabstops>
  <resources>
   <include location="../res.qrc"/>
  </resources>
