--- a/client_side/resources/ui/tag_create_window.ui
+++ b/client_side/resources/ui/tag_create_window.ui
@@ -11,25 +11,25 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Vaultary - category create</string>
+   <string>Vaultary - tag create</string>
   </property>
-  <layout class="QVBoxLayout" name="verticalLayout">
+  <layout class="QVBoxLayout" name="verticalLayout_3">
    <item>
-    <layout class="QVBoxLayout" name="verticalLayout_2">
+    <layout class="QVBoxLayout" name="verticalLayout">
      <item>
-      <widget class="QLabel" name="category_label">
+      <widget class="QLabel" name="tag_name_label">
        <property name="font">
         <font>
          <pointsize>12</pointsize>
         </font>
        </property>
        <property name="text">
-        <string>New category name:</string>
+        <string>New tag name:</string>
        </property>
       </widget>
      </item>
      <item>
-      <widget class="QLineEdit" name="category_lineEdit">
+      <widget class="QLineEdit" name="tag_name_lineEdit">
        <property name="font">
         <font>
          <pointsize>10</pointsize>
@@ -40,7 +40,7 @@
     </layout>
    </item>
    <item>
-    <layout class="QHBoxLayout" name="horizontalLayout_2">
+    <layout class="QVBoxLayout" name="verticalLayout_2">
      <item>
       <widget class="QLabel" name="error_label">
        <property name="font">
@@ -54,15 +54,12 @@
        <property name="text">
         <string/>
        </property>
-       <property name="wordWrap">
-        <bool>true</bool>
-       </property>
       </widget>
      </item>
     </layout>
    </item>
    <item>
-    <layout class="QHBoxLayout" name="horizontalLayout">
+    <layout class="QVBoxLayout" name="verticalLayout_4">
      <item>
       <widget class="QPushButton" name="create_pushButton">
        <property name="font">
@@ -71,7 +68,7 @@
         </font>
        </property>
        <property name="text">
-        <string>Create category</string>
+        <string>Create tag</string>
        </property>
       </widget>
      </item>
