--- a/client_side/resources/ui/user_password_change_window.ui
+++ b/client_side/resources/ui/user_password_change_window.ui
@@ -127,6 +127,12 @@
    </item>
   </layout>
  </widget>
+ <tabstops>
+  <tabstop>old_password_lineEdit</tabstop>
+  <tabstop>new_password_lineEdit</tabstop>
+  <tabstop>repeated_password_lineEdit</tabstop>
+  <tabstop>confirm_pushButton</tabstop>
+ </tabstops>
  <resources/>
  <connections/>
 </ui>
