--- a/client_side/resources/ui/main_window.ui
+++ b/client_side/resources/ui/main_window.ui
@@ -17,7 +17,7 @@
    <bool>true</bool>
   </property>
   <widget class="QWidget" name="centralwidget">
-   <layout class="QGridLayout" name="gridLayout" rowstretch="1,10,4,5" columnstretch="1,4,20">
+   <layout class="QGridLayout" name="gridLayout" rowstretch="1,10,4,5" columnstretch="1,4,20,4,0">
     <property name="leftMargin">
      <number>10</number>
     </property>
@@ -33,25 +33,44 @@
     <property name="spacing">
      <number>5</number>
     </property>
-    <item row="0" column="1" colspan="2">
-     <widget class="QLineEdit" name="search_lineEdit">
+    <item row="2" column="0" colspan="2">
+     <widget class="QPushButton" name="update_pushButton">
+      <property name="sizePolicy">
+       <sizepolicy hsizetype="Minimum" vsizetype="Maximum">
+        <horstretch>0</horstretch>
+        <verstretch>0</verstretch>
+       </sizepolicy>
+      </property>
+      <property name="maximumSize">
+       <size>
+        <width>16777215</width>
+        <height>32</height>
+       </size>
+      </property>
       <property name="font">
        <font>
         <pointsize>12</pointsize>
        </font>
       </property>
-      <property name="styleSheet">
-       <string notr="true"/>
-      </property>
       <property name="text">
        <string/>
       </property>
-      <property name="clearButtonEnabled">
+      <property name="icon">
+       <iconset resource="../res.qrc">
+        <normaloff>:/png/icons/sync.png</normaloff>:/png/icons/sync.png</iconset>
+      </property>
+      <property name="iconSize">
+       <size>
+        <width>32</width>
+        <height>32</height>
+       </size>
+      </property>
+      <property name="flat">
        <bool>false</bool>
       </property>
      </widget>
     </item>
-    <item row="1" column="2" rowspan="2">
+    <item row="1" column="2" rowspan="2" colspan="3">
      <widget class="QTableWidget" name="tableWidget">
       <property name="font">
        <font>
@@ -154,6 +173,36 @@
       </column>
      </widget>
     </item>
+    <item row="3" column="0" colspan="5">
+     <widget class="QTextBrowser" name="textBrowser">
+      <property name="font">
+       <font>
+        <pointsize>10</pointsize>
+       </font>
+      </property>
+      <property name="openExternalLinks">
+       <bool>true</bool>
+      </property>
+     </widget>
+    </item>
+    <item row="0" column="1" colspan="2">
+     <widget class="QLineEdit" name="search_lineEdit">
+      <property name="font">
+       <font>
+        <pointsize>12</pointsize>
+       </font>
+      </property>
+      <property name="styleSheet">
+       <string notr="true"/>
+      </property>
+      <property name="text">
+       <string/>
+      </property>
+      <property name="clearButtonEnabled">
+       <bool>false</bool>
+      </property>
+     </widget>
+    </item>
     <item row="0" column="0">
      <widget class="QWidget" name="widget" native="true">
       <property name="styleSheet">
@@ -185,53 +234,18 @@
       </property>
      </widget>
     </item>
-    <item row="2" column="0" colspan="2">
-     <widget class="QPushButton" name="update_pushButton">
-      <property name="sizePolicy">
-       <sizepolicy hsizetype="Minimum" vsizetype="Maximum">
-        <horstretch>0</horstretch>
-        <verstretch>0</verstretch>
-       </sizepolicy>
-      </property>
-      <property name="maximumSize">
-       <size>
-        <width>16777215</width>
-        <height>32</height>
-       </size>
-      </property>
+    <item row="0" column="3">
+     <widget class="QComboBox" name="tag_comboBox">
       <property name="font">
        <font>
         <pointsize>12</pointsize>
        </font>
       </property>
-      <property name="text">
-       <string/>
-      </property>
-      <property name="icon">
-       <iconset resource="../res.qrc">
-        <normaloff>:/png/icons/sync.png</normaloff>:/png/icons/sync.png</iconset>
-      </property>
-      <property name="iconSize">
-       <size>
-        <width>32</width>
-        <height>32</height>
-       </size>
-      </property>
-      <property name="flat">
-       <bool>false</bool>
-      </property>
-     </widget>
-    </item>
-    <item row="3" column="0" colspan="3">
-     <widget class="QTextBrowser" name="textBrowser">
-      <property name="font">
-       <font>
-        <pointsize>10</pointsize>
-       </font>
-      </property>
-      <property name="openExternalLinks">
-       <bool>true</bool>
-      </property>
+      <item>
+       <property name="text">
+        <string>Select a tag...</string>
+       </property>
+      </item>
      </widget>
     </item>
    </layout>
