--- a/client_side/resources/ui/main_window.ui
+++ b/client_side/resources/ui/main_window.ui
@@ -17,7 +17,7 @@
    <bool>true</bool>
   </property>
   <widget class="QWidget" name="centralwidget">
-   <layout class="QGridLayout" name="gridLayout" rowstretch="1,10,4,5" columnstretch="1,4,20,4,0">
+   <layout class="QGridLayout" name="gridLayout" rowstretch="1,10,4,5" columnstretch="1,4,20,4,2,4">
     <property name="leftMargin">
      <number>10</number>
     </property>
@@ -33,44 +33,7 @@
     <property name="spacing">
      <number>5</number>
     </property>
-    <item row="2" column="0" colspan="2">
-     <widget class="QPushButton" name="update_pushButton">
-      <property name="sizePolicy">
-       <sizepolicy hsizetype="Minimum" vsizetype="Maximum">
-        <horstretch>0</horstretch>
-        <verstretch>0</verstretch>
-       </sizepolicy>
-      </property>
-      <property name="maximumSize">
-       <size>
-        <width>16777215</width>
-        <height>32</height>
-       </size>
-      </property>
-      <property name="font">
-       <font>
-        <pointsize>12</pointsize>
-       </font>
-      </property>
-      <property name="text">
-       <string/>
-      </property>
-      <property name="icon">
-       <iconset resource="../res.qrc">
-        <normaloff>:/png/icons/sync.png</normaloff>:/png/icons/sync.png</iconset>
-      </property>
-      <property name="iconSize">
-       <size>
-        <width>32</width>
-        <height>32</height>
-       </size>
-      </property>
-      <property name="flat">
-       <bool>false</bool>
-      </property>
-     </widget>
-    </item>
-    <item row="1" column="2" rowspan="2" colspan="3">
+    <item row="1" column="2" rowspan="2" colspan="4">
      <widget class="QTableWidget" name="tableWidget">
       <property name="font">
        <font>
@@ -173,7 +136,7 @@
       </column>
      </widget>
     </item>
-    <item row="3" column="0" colspan="5">
+    <item row="3" column="0" colspan="6">
      <widget class="QTextBrowser" name="textBrowser">
       <property name="font">
        <font>
@@ -182,31 +145,6 @@
       </property>
       <property name="openExternalLinks">
        <bool>true</bool>
-      </property>
-     </widget>
-    </item>
-    <item row="0" column="1" colspan="2">
-     <widget class="QLineEdit" name="search_lineEdit">
-      <property name="font">
-       <font>
-        <pointsize>12</pointsize>
-       </font>
-      </property>
-      <property name="styleSheet">
-       <string notr="true"/>
-      </property>
-      <property name="text">
-       <string/>
-      </property>
-      <property name="clearButtonEnabled">
-       <bool>false</bool>
-      </property>
-     </widget>
-    </item>
-    <item row="0" column="0">
-     <widget class="QWidget" name="widget" native="true">
-      <property name="styleSheet">
-       <string notr="true">image: url(:/png/icons/search.png);</string>
       </property>
      </widget>
     </item>
@@ -234,7 +172,51 @@
       </property>
      </widget>
     </item>
-    <item row="0" column="3">
+    <item row="2" column="0" colspan="2">
+     <widget class="QPushButton" name="update_pushButton">
+      <property name="sizePolicy">
+       <sizepolicy hsizetype="Minimum" vsizetype="Maximum">
+        <horstretch>0</horstretch>
+        <verstretch>0</verstretch>
+       </sizepolicy>
+      </property>
+      <property name="maximumSize">
+       <size>
+        <width>16777215</width>
+        <height>32</height>
+       </size>
+      </property>
+      <property name="font">
+       <font>
+        <pointsize>12</pointsize>
+       </font>
+      </property>
+      <property name="text">
+       <string/>
+      </property>
+      <property name="icon">
+       <iconset resource="../res.qrc">
+        <normaloff>:/png/icons/sync.png</normaloff>:/png/icons/sync.png</iconset>
+      </property>
+      <property name="iconSize">
+       <size>
+        <width>32</width>
+        <height>32</height>
+       </size>
+      </property>
+      <property name="flat">
+       <bool>false</bool>
+      </property>
+     </widget>
+    </item>
+    <item row="0" column="0">
+     <widget class="QWidget" name="widget" native="true">
+      <property name="styleSheet">
+       <string notr="true">image: url(:/png/icons/search.png);</string>
+      </property>
+     </widget>
+    </item>
+    <item row="0" column="5">
      <widget class="QComboBox" name="tag_comboBox">
       <property name="font">
        <font>
@@ -243,9 +225,39 @@
       </property>
       <item>
        <property name="text">
-        <string>Select a tag...</string>
+        <string/>
        </property>
       </item>
+     </widget>
+    </item>
+    <item row="0" column="4">
+     <widget class="QLabel" name="label">
+      <property name="font">
+       <font>
+        <pointsize>10</pointsize>
+       </font>
+      </property>
+      <property name="text">
+       <string>Filter by tags:</string>
+      </property>
+     </widget>
+    </item>
+    <item row="0" column="1" colspan="3">
+     <widget class="QLineEdit" name="search_lineEdit">
+      <property name="font">
+       <font>
+        <pointsize>12</pointsize>
+       </font>
+      </property>
+      <property name="styleSheet">
+       <string notr="true"/>
+      </property>
+      <property name="text">
+       <string/>
+      </property>
+      <property name="clearButtonEnabled">
+       <bool>false</bool>
+      </property>
      </widget>
     </item>
    </layout>
