--- a/client_side/resources/ui/registration_window.ui
+++ b/client_side/resources/ui/registration_window.ui
@@ -45,7 +45,7 @@
         </font>
        </property>
        <property name="text">
-        <string>sk2can</string>
+        <string></string>
        </property>
        <property name="placeholderText">
         <string/>
